<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- 标题 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_travel_advice"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp" />

            <!-- 地点 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location:"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp" />

                <EditText
                    android:id="@+id/location_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_enter_location"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_background" />
            </LinearLayout>

            <!-- 出行日期 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_date"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:id="@+id/date_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_select_date"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:background="@drawable/edit_text_background"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:clickable="true" />
            </LinearLayout>

            <!-- 按钮 -->
            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_get_info"
                android:padding="10dp"
                android:textSize="18dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_rectangle"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp" />

            <!-- 天气情况 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_weather_info"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="#000000">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="@color/white"
                    >

                    <TextView
                        android:id="@+id/location_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/weather_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/weather_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/temp_min_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- 旅行建议 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_travel_advice"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:id="@+id/travel_advice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_travel_advice"
                    android:textColor="@android:color/black"
                    android:padding="16dp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_nav_menu"
        android:background="@color/white"
        app:labelVisibilityMode="unlabeled"
        app:itemIconSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>
